Change mysql to mongo, update telegraf.conf to process docker and mongo

--- a/resource_monitoring/Makefile
+++ b/resource_monitoring/Makefile
@@ -2,9 +2,9 @@
 .PHONY: test
 
 # concurrency levels
-CONCURRENCY = 5 20 50
+CONCURRENCY = 1 5 20
 # endpoints
-ENDPOINTS = mysqlread esread
+ENDPOINTS = mongoread esread
 
 # run siege test with different concurrency levels and endpoints
 test:
