--- a/resource_monitoring/configuration.env
+++ b/resource_monitoring/configuration.env
@@ -14,11 +14,9 @@ INFLUXDB_DB=influx
 INFLUXDB_ADMIN_USER=admin
 INFLUXDB_ADMIN_PASSWORD=admin
 
-# Mysql options
-MYSQL_ROOT_PASSWORD=rootpassword
-MYSQL_DATABASE=dbname
-MYSQL_USER=dbuser
-MYSQL_PASSWORD=dbpassword
+# Mongodb options
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=secret
 
 
 # Es options
