--- a/resource_monitoring/nginx.conf
+++ b/resource_monitoring/nginx.conf
@@ -44,5 +44,11 @@ http {
             proxy_set_header Host $http_host;
             proxy_pass http://grafana_app;
         }
+
+        location /nginx_status {
+          stub_status;
+          allow 172.18.0.0/16; # only allow requests from docker subnet
+          deny all;
+        }
     }
 }
